@@ -32,7 +32,7 @@ public class Runner extends Thread {
 		result = solution.result.get(0);
 		compile();
 		if (solution.result.get(0).verdict == Result.Verdict.NONE) {
-			for (int i = 0; i < solution.problem.caseNo; i++) {
+			for (int i = 0; i < solution.problem.totalCase; i++) {
 				result = solution.result.get(i);
 
 				judge(i);
@@ -49,6 +49,7 @@ public class Runner extends Thread {
 	public Result result; // for easy access
 
 	public Path runningPath;
+	public Path executable;
 	public Path securityPolicy;
 
 	public long timeOut;
@@ -62,6 +63,7 @@ public class Runner extends Thread {
 		this.bufferSize = Conf.bufferSize();
 		
 		this.runningPath = runningPath;
+		this.executable = Paths.get(runningPath + "/" + solution.id + "/1");
 		this.securityPolicy = Conf.securityPolicyFile();
 
 		this.solution    = solution;
@@ -72,6 +74,12 @@ public class Runner extends Thread {
 		Path output = Paths.get(runningPath + "/" + solution.id + "/" + caseNo + "/output");
 		Path error = Paths.get(runningPath + "/" + solution.id + "/" + caseNo + "/error");
 		Path metrics = Paths.get(runningPath + "/" + solution.id + "/" + caseNo + "/metrics");
+
+//EXE=$1
+//INFILE=$2
+//OUTFILE=$3
+//ERRORFILE=$4
+//TIMEOUT=$5
 
 		if (!solution.problem.saveInput(caseNo, input)) {
 			result.verdict = Result.Verdict.JE;
@@ -88,12 +96,12 @@ public class Runner extends Thread {
 			return ;
 		}
 
-		ProcessBuilder pb = getProcessBuilder(solution.language);
+		ProcessBuilder pb = getProcessBuilder(solution.language, input, output, error, metrics);
 
 		try {
 			Process p = pb.start();
 
-			Thread.sleep(timeOut);
+			Thread.sleep((long) (solution.problem.timeLimit + timeOut));
 			if (p.isAlive()) {
 				p.destroyForcibly();
 				result.verdict = Result.Verdict.TL;
@@ -121,30 +129,52 @@ public class Runner extends Thread {
 	}
 
 	public void compile() {
+		Path source = Paths.get(runningPath + "/" + solution.id + "/source");
+		executable = executable;
+		Path compileOut = Paths.get(runningPath + "/" + solution.id + "/compileOut");
+		Path compileError = Paths.get(runningPath + "/" + solution.id + "/compileError");
+
+//SOURCE=$1
+//OUT=$2
+//COMOUT=$3
+//COMERROR=$4
+
+		if (!solution.saveSource(source)) {
+			result.verdict = Result.Verdict.JE;
+			return ;
+		}
+
 		try {
-			boolean ok = Compiler.compile(solution.language, solution.code, runningPath);
+			boolean ok = Compiler.compile(solution.language, source, executable, compileOut, compileError);
 			if (!ok)
 				result.verdict = Result.Verdict.CE;
 		} catch (IOException e) {
+			e.printStackTrace();
 			result.verdict = Result.Verdict.JE;
 		}
 	}
 
-	public ProcessBuilder getProcessBuilder(Solution.Language language) {
-//		List<String> cmd = Arrays.asList("java"
-//				, "-client"
-//				, "-Xmx" + (int) (solution.problem.memoryLimit + 10) + "m"
-//				, "-Xss64m"
-////				, "-Djava.security.manager"
-////				, "-Djava.security.policy=" + securityPolicy
-//				, "-cp"
-//				, runningPath.toString()
-//				, solution.codeClass
-//		);
+	public ProcessBuilder getProcessBuilder(Solution.Language language, Path input, Path output, Path error, Path metrics) {
+		String scriptPath = Conf.runScript();
+		switch (language) {
+			case CPP:
+				scriptPath = scriptPath + "/CPP.sh";
+				break;
+			case JAVA:
+				scriptPath = scriptPath + "/JAVA.sh";
+				break;
+			default:
+				return null;
+		}
 
-		ProcessBuilder pb = new ProcessBuilder(Conf.runScript());
-
-		return pb;
+		return new ProcessBuilder(
+				scriptPath,
+				executable.toString(),
+				input.toString(),
+				output.toString(),
+				error.toString(),
+				metrics.toString()
+		);
 	}
 
 	public void cleanUp(Path path) {
